k8s/facturacion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
	name: facturacion
spec:
	replicas: 1
	selector:
		matchLabels:
			app: facturacion
	template:
		metadata:
			labels:
				app: facturacion
		spec:
			containers:
				- name: facturacion
					image: tuusuario/facturacion:latest
					ports:
						- containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
	name: facturacion
spec:
	selector:
		app: facturacion
	ports:
		- port: 5002
			targetPort: 5002
	type: ClusterIP
apiVersion: apps/v1
kind: Deployment
metadata:
	name: facturacion
spec:
	replicas: 1
	selector:
		matchLabels:
			app: facturacion
	template:
		metadata:
			labels:
				app: facturacion
		spec:
			containers:
			- name: facturacion
				image: tuusuario/facturacion:latest
				ports:
				- containerPort: 5002
apiVersion: v1
kind: Service
metadata:
	name: facturacion
spec:
	selector:
		app: facturacion
	ports:
	- port: 5002
		targetPort: 5002
	type: ClusterIP

apiVersion: apps/v1
kind: Deployment
metadata:
	name: facturacion
spec:
	replicas: 1
	selector:
		matchLabels:
			app: facturacion
	template:
		metadata:
			labels:
				app: facturacion
		spec:
			containers:
				- name: facturacion
					image: tuusuario/facturacion:latest
					ports:
						- containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
	name: facturacion
spec:
	selector:
		app: facturacion
	ports:
		- port: 5002
			targetPort: 5002
	type: ClusterIP
